# cs184-GPU-accelerated-raytracing

./: .gitignore  CMakeLists.txt  benchmarks.py  cam1.txt  generate_images.sh  hive_first_time_build.sh  install_clang-8.sh
docs/: _config.yml  index.md
docs/milestone_report/: _config.yml  index.md
results/: benchmark_log.txt
src/: CMakeLists.txt  application.cpp  bbox.cpp  bbox.h  bsdf.cpp  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  image.h  kernel_types.cpp  kernel_types.h  part1_code.cpp  pathtracer.cpp  pathtracer.h
src/kernel/: bsdf.h  intersect.h  light.h  pathtrace_pixel.cl  pathtrace_sample.cl  sampler.h  shared_types.h  test2.cl  types.h  util.h
src/static_scene/: environment_light.cpp  environment_light.h  light.cpp  light.h  primitive.h  scene.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
